<resources>
    <string name="app_name">Adds2</string>

    <!--  Drawer  -->
    <string name="my_adds">My adds</string>
    <string name="cars">Cars</string>
    <string name="computers">Computers</string>
    <string name="smartphones">Smartphones</string>
    <string name="appliances">Appliances</string>
    <string name="account">Account</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>

    <string name="close_drawer">Close drawer</string>
    <string name="open_drawer">Open drawer</string>

    <string name="email">freyaspice@gmail.com</string>
    <string name="avatar">Avatar</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_now">Register now</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="your_web_client_id">1048315406270-cnd6bdadcv84ree0j8h5n5n1ae7gg01p.apps.googleusercontent.com</string>
    <string name="your_web_client_id2">1048315406270-ku73i596ru6sllk6gq2jekclle1hof1f.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>