<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/register"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:inputType="textWebEmailAddress"
        android:textSize="@dimen/text_size_default" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="numberPassword"
        android:textSize="@dimen/text_size_default" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/register_now"
        android:textSize="@dimen/text_size_default" />


</LinearLayout>








